--- a/css/style.css
+++ b/css/style.css
@@ -87,7 +87,7 @@ PRELOADER
   width: 40px;
   height: 40px;
   margin: 0px auto;
-  background-color: #333;
+  background-color: #d21e46;
   border-radius: 100%;
   -webkit-animation: scaleout 1.0s infinite ease-in-out;
   animation: scaleout 1.0s infinite ease-in-out;
